[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-a1-flex-hunter"
version = "0.1.1"
description = "Safely coordinate bounded OCI Ampere A1 Flex launch attempts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sagneo" }]
dependencies = ["oci>=2.160,<3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
oci-a1-flex-hunter = "oci_a1_flex_hunter.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
packages = ["oci_a1_flex_hunter"]
mypy_path = "src"
